--- a/testbook/public/template/Connexion.html.twig
+++ b/testbook/public/template/Connexion.html.twig
@@ -26,14 +26,14 @@
                     <h3 class="mb-4 text-center">CONNECTEZ-VOUS</h3>
                     <form action="#" class="signin-form">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Username" required>
+                            <input id="TB_Login" type="text" class="form-control" placeholder="Username" required>
                         </div>
                         <div class="form-group">
-                            <input id="password-field" type="password" class="form-control" placeholder="Password" required>
-                            <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
+                            <input id="TB_Mdp" type="password" class="form-control" placeholder="Password" required>
+                            <span toggle="#TB_Mdp" class="fa fa-fw fa-eye field-icon toggle-password"></span>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="form-control btn btn-primary submit px-3">Sign In</button>
+                            <button type="submit" class="form-control btn btn-primary submit px-3" id="BTN_Login">Sign In</button>
                         </div>
                         <div class="form-group d-md-flex">
                             <div class="w-50">
@@ -48,10 +48,12 @@
     </div>
 </section>
 
-<script src="js/jquery.min.js"></script>
-<script src="js/popper.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
+<script src="../js/jquery.min.js"></script>
+<script src="../js/popper.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/main.js"></script>
+<script src="../js/login.js"></script>
+
 
 </body>
 </html>
